--- a/index.html
+++ b/index.html
@@ -19,28 +19,28 @@
 
     <!-- Navbar starts -->
     <nav class="navbar navbar-inverse">
-      <div class="container-fluid"
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">BE</a>
-      </div>
-      <div class="collapse navbar-collapse" id="navbar">
-        <ul class="nav navbar-nav navbar-right">
-          <li class="active"><a href="https://thaoha2512.github.io/group-project2">Home</a></li>
-          <li><a href="https://thaoha2512.github.io/group-project2/aboutpage">About</a></li>
-          <li><a href="#">Events</a></li>
-          <li><a href="#">Contact</a></li>
-          <li><form class="example" action="/action_page.php" style="margin:auto;max-width:200px">
-            <input type="text" placeholder="Search..." name="search">
-            <button type="submit"><i class="fa fa-search"></i></button>
-          </form></li>
-        </ul>
-      </div>
-      </div>
+    <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">BE</a>
+    </div>
+    <div class="collapse navbar-collapse" id="navbar">
+      <ul class="nav navbar-nav navbar-right">
+        <li class="active"><a href="https://thaoha2512.github.io/group-project2">Home</a></li>
+        <li><a href="https://thaoha2512.github.io/group-project2/aboutpage">About</a></li>
+        <li><a href="#">Events</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><form class="example" action="/action_page.php" style="margin:auto;max-width:200px">
+          <input type="text" placeholder="Search..." name="search">
+          <button type="submit"><i class="fa fa-search"></i></button>
+        </form></li>
+      </ul>
+    </div>
+    </div>
     </nav>
 
     <!-- Carousel -->
@@ -98,39 +98,32 @@
       </div>
     </div><br><br>
 
-<!-- Contact -->
-        <div class="container-fluid bg-3 text-center" id="contact">
-          <h3>Contact us</h3><br>
-          <div class="row">
+    <!-- Contact -->
+    <div class="container-fluid bg-3 text-center" id="contact">
+      <h3>Contact us</h3><br>
+      <div class="row">
+        <div class="col-sm-4">
+          <p>Become a member</p>
+          <a href="https://www.thesubath.com/bath-entrepreneurs/"><img src="contactus1.png" class="img-responsive" style="width:100%" height="300px" alt="Join Us"></a>
+        </div>
+        <div class="col-sm-4">
+          <p>Drop us a question</p>
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeC4ABIfl4mTYlHTOTTPe88YtTPrDICIhlNCTByEBRKmsh90A/viewform?embedded=true" width="100%" height="300px" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+        </div>
+        <div class="col-sm-4">
+          <p>Find us</p>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2490.3512147377032!2d-2.3285873846926872!3d51.37822277961408!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487181bb49a7bfd7%3A0x842e7cc0699da7e7!2sUniversity+of+Bath!5e0!3m2!1sen!2suk!4v1554147359380!5m2!1sen!2suk" width="100%" height="300px" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+    </div><br><br>
 
-            <div class="col-sm-4">
-              <p>Become a member</p>
-              <a href="https://www.thesubath.com/bath-entrepreneurs/"><img src="contactus1.png" class="img-responsive" style="width:100%" height="300px" alt="Join Us"></a>
-            </div>
-
-            <div class="col-sm-4">
-              <p>Drop us a question</p>
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeC4ABIfl4mTYlHTOTTPe88YtTPrDICIhlNCTByEBRKmsh90A/viewform?embedded=true" width="100%" height="300px" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-</div>
-
-            <div class="col-sm-4">
-              <p>Find us</p>
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2490.3512147377032!2d-2.3285873846926872!3d51.37822277961408!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487181bb49a7bfd7%3A0x842e7cc0699da7e7!2sUniversity+of+Bath!5e0!3m2!1sen!2suk!4v1554147359380!5m2!1sen!2suk" width="100%" height="300px" frameborder="0" style="border:0" allowfullscreen></iframe>
-
-            </div>
-          </div><br><br>
-
-
-
-
-<!-- Footer -->
-          <footer class="container-fluid text-center">
-            <h3>Connect with us on social media</h3><br>
-            <a href="https://www.facebook.com/bathentrepreneurs/" class="fa fa-facebook"></a>
-            <a href="https://www.linkedin.com/company/bathentrepreneurs/" class="fa fa-linkedin"></a>
-            <a href="https://www.instagram.com/bathentrepreneurs" class="fa fa-instagram"></a>
-          </footer>
-
+    <!-- Footer -->
+    <footer class="container-fluid text-center">
+      <h3>Connect with us on social media</h3><br>
+      <a href="https://www.facebook.com/bathentrepreneurs/" class="fa fa-facebook"></a>
+      <a href="https://www.linkedin.com/company/bathentrepreneurs/" class="fa fa-linkedin"></a>
+      <a href="https://www.instagram.com/bathentrepreneurs" class="fa fa-instagram"></a>
+    </footer>
 
   </body>
+
 </html>
