--- a/aboutpage.html
+++ b/aboutpage.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>About</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <head>
+    <title>About</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  </head>
 
-
-</head>
-
-<body>
-    <!-- CSS link -->
+  <body>
+  <!-- CSS link -->
   <link rel="stylesheet" href="css/aboutpage.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <!-- Navbar starts -->
-    <nav class="navbar navbar-inverse">
+  <!-- Navbar starts -->
+  <nav class="navbar navbar-inverse">
     <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
@@ -46,52 +44,50 @@
     </div>
     </nav>
 
-
-
-<div class="container">
+    <div class="container">
     <div class="item active">
       <img class="img-banner" src="aboutpage/img/banner.jpg" alt="bannerimage" style="width:100%;">
-  </div>
-
-<div class="container-fluid bg-3 text-center" id="aboutus">
-  <h3> About Us <h3>
-  </div>
-
-  <div class="container-fluid bg-3 text-center" id="abouttext">
-  <p> Bath Entrepreneurs is a student group welcoming and uniting all student entrepreneurs at Bath.
-  </p>
-  <p> We provide extraordinary networking, learning, and funding opportunities.</p>
-    </div><br>
-
-
-<div class="container-fluid bg-3 text-center" id="team">
-  <h3>Our Team </h3><br>
-  <div class="row">
-    <div class="col-sm-3">
-      <p>Chair - Kristina </p>
-      <img src="aboutpage/img/kristina.jpg" class="img-responsive team-photo" alt="kristinaimage">
     </div>
-    <div class="col-sm-3">
+
+    <div class="container-fluid bg-3 text-center" id="aboutus">
+      <h3> About Us <h3>
+      </div>
+
+    <div class="container-fluid bg-3 text-center" id="abouttext">
+        <p> Bath Entrepreneurs is a student group welcoming and uniting all student entrepreneurs at Bath.</p>
+        <p> We provide extraordinary networking, learning, and funding opportunities.</p>
+      </div><br>
+
+
+      <div class="container-fluid bg-3 text-center" id="team">
+        <h3>Our Team </h3><br>
+        <div class="row">
+          <div class="col-sm-3">
+            <p>Chair - Kristina </p>
+            <img src="aboutpage/img/kristina.jpg" class="img-responsive team-photo" alt="kristinaimage">
+          </div>
+
+  <div class="col-sm-3">
       <p>Vice Chair - Alex </p>
       <img src="aboutpage/img/alex.jpg" class="img-responsive team-photo" style="width:100%" alt="aleximage">
-    </div>
-    <div class="col-sm-3">
+  </div>
+
+  <div class="col-sm-3">
       <p>Marketing - Marysia</p>
       <img src="aboutpage/img/marysia.jpg" class="img-responsive team-photo" style="width:100%" alt="marysiaimage">
-    </div>
+  </div>
     <div class="col-sm-3">
       <p>Treasurer - Malena </p>
       <img src="aboutpage/img/malena.jpg" class="img-responsive team-photo" style="width:100%" alt="malenaimage">
-    </div>
-</div><br><br>
+    </div><br><br>
 
-    <!-- Footer -->
-              <footer class="container-fluid text-center">
-                <h3>Connect with us on social media</h3><br>
-                <a href="https://www.facebook.com/bathentrepreneurs/" class="fa fa-facebook"></a>
-                <a href="https://www.linkedin.com/company/bathentrepreneurs/" class="fa fa-linkedin"></a>
-                <a href="https://www.instagram.com/bathentrepreneurs" class="fa fa-instagram"></a>
-              </footer>
+<!-- Footer -->
+<footer class="container-fluid text-center">
+    <h3>Connect with us on social media</h3><br>
+      <a href="https://www.facebook.com/bathentrepreneurs/" class="fa fa-facebook"></a>
+      <a href="https://www.linkedin.com/company/bathentrepreneurs/" class="fa fa-linkedin"></a>
+      <a href="https://www.instagram.com/bathentrepreneurs" class="fa fa-instagram"></a>
+</footer>
 
 
 </body>
